<resources>
    <string name="app_name">NUTTY</string>
    <!--FRAGMENT NAMES-->

    <!--Splash Screen Fragment-->
    <string name="splash_screen_1_heading">NUTTY</string>
    <string name="splash_screen_1_message">BY .NUKI™</string>
    <string name="splash_screen_2_heading">WHAT IS NUTTY?</string>
    <string name="splash_screen_2_message">NUTTY IS AN APPLICATION DESIGNED TO GIVE YOUR TOYS A VOICE!</string>
    <string name="splash_screen_3_heading">WHAT CAN NUTTY DO?</string>
    <string name="splash_screen_3_message">YOU CAN CREATE CUSTOM VOICE PROFILES AND CUSTOM SPEECHES AND HAVE YOUR TOYS SPEAK IT!</string>
    <string name="splash_screen_4_heading">LETS BEGIN</string>
    <string name="splash_screen_4_message">PLEASE ALLOW THE APPLICATION TO SAVE AND RECORD AUDIO!</string>
    <string name="splash_screen_next">NEXT</string>
    <string name="splash_screen_skip">SKIP</string>
    <string name="splash_screen_start">OKAY</string>

    <!--Create Voice Profile Fragment-->
    <string name="current_voice_profiles">YOUR VOICE PROFILES</string>
    <string name="fragment_create_voice_profile">CREATE VOICE PROFILE</string>
    <string name="add_new_voice_profile">ADD NEW VOICE PROFILE</string>

    <string name="choose_speaker">PLEASE SELECT SPEAKER</string>
    <string name="girl_voice">GIRL</string>
    <string name="boy_voice">BOY</string>

    <string name="choose_emotion">SELECT SPEAKER EMOTION</string>
    <string name="emotion_none">NONE</string>
    <string name="emotion_happy">HAPPY</string>
    <string name="emotion_sad">SAD</string>
    <string name="emotion_angry">ANGRY</string>

    <string name="choose_emotion_level">SELECT EMOTION INTENSITY</string>
    <string name="choose_pitch">ADJUST VOICE PITCH</string>
    <string name="choose_speed">ADJUST VOICE SPEED</string>
    <string name="choose_volume">ADJUST VOICE VOLUME</string>

    <string name="test_voice_profile">TEST VOICE PROFILE</string>
    <string name="save_voice">SAVE VOICE PROFILE</string>
    <string name="test_voice_1_button">GREETING</string>
    <string name="test_voice_1_sample">Hello! How do you like my new voice?</string>
    <string name="test_voice_2_button">GOOD MORNING</string>
    <string name="test_voice_2_sample">Good morning, rise and shine! It is time to get up.</string>
    <string name="test_voice_3_button">DINNER TIME</string>
    <string name="test_voice_3_sample">Are you hungry? I am sure hungry! Lets eat some dinner!</string>

    <string name="confirm_save_voiceprofile">DO YOU WISH TO SAVE THIS VOICE PROFILE? IF SO PLEASE ENTER A UNIQUE NAME</string>
    <string name="save_voice_profile_title">SAVE?</string>
    <string name="save_voice_profile_message">PLEASE GIVE YOUR CUSTOM VOICE PROFILE A UNIQUE NAME</string>
    <string name="save_voice_profile_error">THE NAME YOU ENTERED ALREADY EXISTS</string>


    <!--Create New Speech Fragment-->
    <string name="choose_voice_profile">PLEASE CHOOSE A VOICE TO USE</string>
    <string name="enter_text">PLEASE ENTER TEXT YOU WISH TO SPEAK</string>
    <string name="enter_text_hint">PLEASE ENTER TEXT YOU WISH TO SPEAK</string>
    <string name="fragment_create_new_speech">CREATE NEW SPEECH</string>
    <string name="save_speech_title">SAVE?</string>
    <string name="save_speech_message">PLEASE GIVE YOUR CUSTOM SPEECH A UNIQUE NAME</string>
    <string name="save_speech_error">THE NAME YOU ENTERED ALREADY EXISTS</string>

    <!--Saved Speech Fragment-->
    <string name="fragment_saved_speeches">SAVED SPEECHES</string>
    <string name="current_saved_speeches">YOUR SAVED SPEECHES</string>


    <!--Live Chat Fragment-->
    <string name="fragment_live_chat">LIVE CHAT</string>
    <string name="test_speech">TEST SPEECH</string>
    <string name="save_speech">SAVE SPEECH</string>
    <string name="play_speech">PLAY SPEECH</string>

    <!--Use Your Voice Fragment-->
    <string name="fragment_use_your_voice">USE YOUR VOICE</string>
    <string name="start_recording">START RECORDING</string>
    <string name="stop_recording">STOP RECORDING</string>
    <string name="playback_recording">PLAYBACK RECORDING</string>
    <string name="save_recording">SAVE RECORDING</string>

    <string name="live_speech_title">PLEASE TAP THE RECORD BUTTON TO START/PAUSE RECORDING</string>
    <string name="save_voice_title">SAVE?</string>
    <string name="save_voice_message">PLEASE GIVE YOUR CUSTOM RECORDING A UNIQUE NAME</string>
    <string name="save_voice_error">THE NAME YOU ENTERED ALREADY EXISTS</string>

    <!--Settings Fragment-->
    <string name="fragment_settings">SETTINGS</string>

    <!--Common-->
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_text_entered">PLEASE ENTER TEXT TO TURN TO SPEECH</string>
    <string name="character_limit">200</string>


    <!--Debug-->
    <string name="placeholder_short">elit ut aliquam</string>
    <string name="placeholder_med">volutpat lacus laoreet non curabitur gravida arcu ac</string>
    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="hello_blank_fragment">#TODO</string>
    <string name="app_name_spaced">N U T T Y</string>


</resources>
