<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UseYourVoice.UseYourVoiceFragment">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible">
    </ProgressBar>

    <Button
        android:id="@+id/voice_start_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_recording" />

    <Button
        android:id="@+id/voice_stop_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_recording"
        android:layout_below="@+id/voice_start_recording" />

    <Button
        android:id="@+id/voice_playback_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playback_recording"
        android:layout_below="@+id/voice_stop_recording" />

    <Button
        android:id="@+id/voice_save_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_recording"
        android:layout_below="@+id/voice_playback_recording" />

</RelativeLayout>