<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pressed"
    tools:context=".Fragments.CreateNewSpeech.CreateNewSpeechFragment">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible">
    </ProgressBar>

    <TextView
        android:id="@+id/select_voice_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/choose_voice_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_below="@+id/select_voice_profile" />

    <TextView
        android:id="@+id/enter_tts_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_text"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:layout_below="@+id/horizontal_recycler_view" />

    <EditText
        android:id="@+id/tts_textbox"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:hint="@string/enter_text_hint"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_above="@+id/test_tts"
        android:gravity="top|left"
        android:maxLength="200"
        android:layout_below="@+id/enter_tts_text" />

    <TextView
        android:id="@+id/character_limit_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="200"
        android:layout_marginRight="16dp"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:layout_below="@+id/tts_textbox" />

    <Button
        android:id="@+id/test_tts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_button"
        android:layout_margin="16dp"
        android:text="@string/test_speech"
        android:layout_above="@+id/save_tts"
        />

    <Button
        android:id="@+id/save_tts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_button"
        android:layout_margin="16dp"
        android:text="@string/save_speech"
        android:layout_alignParentBottom="true" />

</RelativeLayout>